@@ -1,2 +1,7 @@
-# convenience import, this confuses the test coverage tool :(
-from plone.fieldsets.fieldsets import FormFieldsets
+import zope.deferredimport
+
+zope.deferredimport.deprecated(
+    "The convenience import confuses the test coverage tools. "
+    "Please use the fully qualified name instead.",
+    FormFieldsets = 'plone.fieldsets.fieldsets:FormFieldsets',
+    )
